MarcoKitTests/TestData/error/object1.marco
--before
{

--after
1: '}' expected
